--- a/homepage.html
+++ b/homepage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Fantasy Websilte</title>
-</head>
-<body>
-<h1>Hello World!</h1>
-</body>
-<html>
+  <head>
+    <title>Fantasy Website</title>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+  </body>
+  <html></html>
+</html>
